# VisionNav

./: readme.md
progress_reports/: Current Solutions and How my solution unique from that.md  cv_project_summary.md  progress week 1.md  progress week 2.md  progress week 3.md  progress week 4.md  project_timeline.md
wearable_sim/: CMakeLists.txt  package.xml
wearable_sim/config/: slam_params.yaml  slam_params_real.yaml
wearable_sim/launch/: real_launch.py  sim_launch.py
wearable_sim/rviz/: wearable.rviz
wearable_sim/scripts/: arrow_teleop.py  create_sample_sign.py  download_model.py  find_object.py  kobuki_driver.py  phone_camera.py  scene_describer.py  test_voice.py  test_yolo.py  text_reader.py  vision_perception.py
wearable_sim/urdf/: chest_rig.urdf
wearable_sim/worlds/: wearable_world.sdf
